--- a/LRDraft.tex
+++ b/LRDraft.tex
@@ -108,12 +108,12 @@ On the Localization of the Linear-Response excitations in Open Systems}
 \maketitle
 
 \begin{abstract}
-By performing linear-response (LR)-TDDFT calculation of molecular systems within a highly complete real-space basis set, we analyze how the behavior of the dynamical 
-polarizability is influenced by the discretization conditions of the computational treatment.
-We show that optical excitations of energy below the LR ionization potential behave as observable, localized quantities, that can be studied with high precision, 
-provided an adequate level of completeness. We then present indicators that can help to quantify such potential observable property of an excitation, that can be evaluated 
-in any discretization scheme. Under this light, we also show that excitation energies above ionization threshold do not exhibit such observable features and \emph{cannot} be 
-considered as poles of the dynamical polarizability. This result is a inherent behavior of the system's Liouvillian, and does not depend on computational treatment of the 
+We analyze how the fundamental equations which govern the linear response properties of a quantum system are influenced by the presence of open boundaries.
+In particular we focus our attention on linear-response (LR)-TDDFT calculation of molecular systems. We show that optical excitations of energy below the LR ionization potential behave as observable, localized quantities, that can be computationally calculated with high precision, provided an adequate level of completeness.
+Above this energy threshold, the analytic structure of the susceptivity functional might be separated in two sectors: one can still be described in terms of observable excitation with discrete energies, that can be captured within computational setups tailored for localized states. However such excitations are embedded in a continuum of excited states that, on the contrary, behave as plane waves and cannot be described efficiently by the same computational techniques. Such excitations do not exhibit observable features and \emph{cannot} be considered as poles of the dynamical polarizability. Nonetheless, the contribution of such continuum of excitation reveals to be of paramount importance even for expressing LR quantities in the infrared regime like for example static polarizabilities.
+This is particularly evident for small molecules; we show how these considerations might be influenced by the size of molecular system.
+ We then present indicators that can help to quantify such potential observable property of an excitation, that can be evaluated 
+in any discretization scheme.  This result is a inherent behavior of the system's Liouvillian, and does not depend on computational treatment of the 
 unoccupied subspace.
 \end{abstract}
 
