--- a/Analytic_biblio.bib
+++ b/Analytic_biblio.bib
@@ -108,4 +108,15 @@ url = "http://www.sciencedirect.com/science/article/pii/S0301010414000111",
 author = "Bhaarathi Natarajan and Luigi Genovese and Thierry Deutsch and Mark E. Casida"
 }
 
+@article{baroni2008,
+author = {Dario Rocca and Ralph Gebauer and Yousef Saad and Stefano Baroni},
+title = {Turbo charging time-dependent density-functional theory with Lanczos chains},
+journal = {The Journal of Chemical Physics},
+volume = {128},
+number = {15},
+pages = {154105},
+year = {2008},
+doi = {10.1063/1.2899649}
+}
+
 
